DEMO-721 - fixed lost data on booking form submit - fixed styles for error message - fixed style on result page (mobile theme overflow result list was missing) - fixed link on error page - fixed lost params in url on search result - fixed mess with jquery modal styles - removed duplicate code for modals

--- a/src/assets/styles/for-integration.css
+++ b/src/assets/styles/for-integration.css
@@ -1,23 +1,26 @@
 /* ---------------
    for-integration.css
-	 
+
 	 Engineers, please add
 	 styles you need here, not in the code
 	 Deborah will integrate into core.css
 	 during the next phase
-	 
+
 	 please be specific so new styles do not
 	 get picked up where they should not.
-	 
+
 	 thank you!
-	 
+
 	 --------------- */
 
 /* Deborah integrated the 2 styles here on Nov 7
 	 leaving the react-select CSS style sheet separate for now
 */
 
-
+.warning-booking {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
 
 
